[project]
name = "fastapi-pagination-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
